// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddressTable > should render 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <div
      class="table-wrapper with-x-padding"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 w-80 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 last:pr-6 group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-80 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Name
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="hidden relative p-3 m-0 w-60 text-sm font-semibold text-left select-none xl:table-cell dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-60 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-row-reverse justify-end align-top flex-inline"
              >
                <div
                  class=""
                >
                  Balance
                </div>
                <div
                  class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-60 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-60 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Validator
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-20 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-20 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex justify-center align-top flex-inline"
              >
                <div
                  class=""
                >
                  Votes
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 last:pr-6 group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
            data-testid="TableRow"
          >
            <td
              data-testid="AddressRow__wallet"
            >
              <div
                class="flex items-center px-3 pl-3 my-1 ml-3 space-x-3 rounded-l transition-colors duration-100 cursor-pointer min-h-11 group dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex-1 w-40"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="text-sm text-base font-semibold leading-tight border-b border-transparent hover:border-current text-theme-primary-700 transition-[color,border-color] duration-[200ms,350ms] delay-[0s,100ms]"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                    <span
                      class="overflow-hidden min-w-0 text-sm text-base font-semibold no-ligatures"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                    <button
                      class="relative cursor-pointer ring-focus focus:outline-hidden"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="copy"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </td>
            <td
              class="hidden xl:table-cell"
            >
              <div
                class="flex justify-end items-center px-3 my-1 text-sm font-semibold whitespace-nowrap transition-colors duration-100 min-h-11 text-theme-secondary-text dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  95.27653252 ARK
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 space-x-3 text-sm font-semibold transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden items-center space-x-3"
                  data-testid="AddressRow__wallet-vote"
                >
                  <a
                    class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 w-24 truncate md:w-auto"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="https://explorer-evm-test.mainsailhq.com/addresses/0x1Bf9cf8a006a5279ca81Ea9D3F6aC2D41e1353e2"
                    rel="noopener noreferrer"
                  >
                    <span
                      class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                    >
                      <span
                        class="no-ligatures"
                        data-testid="TruncateMiddle"
                      >
                        0x1Bf…353e2
                      </span>
                    </span>
                    <div
                      class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                      data-testid="Link__external"
                    >
                      <div
                        style="height: 12px; width: 12px;"
                      >
                        <svg
                          id="arrow-external"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-center items-center px-3 my-1 text-sm transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="font-semibold text-theme-secondary-400"
                >
                  <span
                    class="text-theme-secondary-text"
                  >
                    1
                  </span>
                  <span>
                    /
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div>
                  <button
                    class="inline-flex relative justify-center items-center p-3 -mr-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                    data-testid="AddressRow__select-0"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Vote
                    </div>
                  </button>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable > should render when the maximum votes is greater than 1 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <div
      class="table-wrapper with-x-padding"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 w-80 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 last:pr-6 group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-80 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Name
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="hidden relative p-3 m-0 w-60 text-sm font-semibold text-left select-none xl:table-cell dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-60 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-row-reverse justify-end align-top flex-inline"
              >
                <div
                  class=""
                >
                  Balance
                </div>
                <div
                  class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-60 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-60 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Validator
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-20 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-20 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex justify-center align-top flex-inline"
              >
                <div
                  class=""
                >
                  Votes
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 last:pr-6 group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
            data-testid="TableRow"
          >
            <td
              data-testid="AddressRow__wallet"
            >
              <div
                class="flex items-center px-3 pl-3 my-1 ml-3 space-x-3 rounded-l transition-colors duration-100 cursor-pointer min-h-11 group dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex-1 w-40"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="text-sm text-base font-semibold leading-tight border-b border-transparent hover:border-current text-theme-primary-700 transition-[color,border-color] duration-[200ms,350ms] delay-[0s,100ms]"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                    <span
                      class="overflow-hidden min-w-0 text-sm text-base font-semibold no-ligatures"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                    <button
                      class="relative cursor-pointer ring-focus focus:outline-hidden"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="copy"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </td>
            <td
              class="hidden xl:table-cell"
            >
              <div
                class="flex justify-end items-center px-3 my-1 text-sm font-semibold whitespace-nowrap transition-colors duration-100 min-h-11 text-theme-secondary-text dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  95.27653252 ARK
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 space-x-3 text-sm font-semibold transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex overflow-hidden items-center space-x-3"
                  data-testid="AddressRow__wallet-vote"
                >
                  <a
                    class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 w-24 truncate md:w-auto"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="https://explorer-evm-test.mainsailhq.com/addresses/0x1Bf9cf8a006a5279ca81Ea9D3F6aC2D41e1353e2"
                    rel="noopener noreferrer"
                  >
                    <span
                      class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                    >
                      <span
                        class="no-ligatures"
                        data-testid="TruncateMiddle"
                      >
                        0x1Bf…353e2
                      </span>
                    </span>
                    <div
                      class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                      data-testid="Link__external"
                    >
                      <div
                        style="height: 12px; width: 12px;"
                      >
                        <svg
                          id="arrow-external"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-center items-center px-3 my-1 text-sm transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="font-semibold text-theme-secondary-400"
                >
                  <span
                    class="text-theme-secondary-text"
                  >
                    1
                  </span>
                  <span>
                    /
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div>
                  <button
                    class="inline-flex relative justify-center items-center p-3 -mr-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                    data-testid="AddressRow__select-0"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Vote
                    </div>
                  </button>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable > should render with empty results 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <div
      class="table-wrapper with-x-padding"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 w-80 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 last:pr-6 group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-80 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Name
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="hidden relative p-3 m-0 w-60 text-sm font-semibold text-left select-none xl:table-cell dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-60 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-row-reverse justify-end align-top flex-inline"
              >
                <div
                  class=""
                >
                  Balance
                </div>
                <div
                  class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-60 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-60 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Validator
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-20 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-20 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex justify-center align-top flex-inline"
              >
                <div
                  class=""
                >
                  Votes
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 last:pr-6 group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
        <tfoot>
          <tr
            class="border-solid md:border-b-4 border-theme-secondary-200 dark:border-theme-secondary-800"
            data-testid="EmptyResults"
          >
            <td
              class="pb-4 pt-[11px]"
              colspan="5"
            >
              <div
                class="flex flex-col justify-center items-center"
              >
                <h3
                  class="mb-2 text-base font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  No Results
                </h3>
                <p
                  class="text-sm text-theme-secondary-700 dark:text-theme-secondary-600"
                >
                  No results found. Refine your search and try again.
                </p>
              </div>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable > should render with voting delegates and handle exception 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <div
      class="table-wrapper with-x-padding"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="relative p-3 m-0 w-80 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 last:pr-6 group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-80 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Name
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="hidden relative p-3 m-0 w-60 text-sm font-semibold text-left select-none xl:table-cell dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-60 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-row-reverse justify-end align-top flex-inline"
              >
                <div
                  class=""
                >
                  Balance
                </div>
                <div
                  class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-60 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-60 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                  Validator
                </div>
                <div
                  class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 w-20 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 first:rounded-tl-xl last:pr-6 last:rounded-tr-xl group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border min-w-20 dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex justify-center align-top flex-inline"
              >
                <div
                  class=""
                >
                  Votes
                </div>
              </div>
            </th>
            <th
              class="relative p-3 m-0 text-sm font-semibold text-left select-none dark:bg-black first:pl-6 last:pr-6 group text-theme-secondary-700 border-theme-secondary-300 bg-theme-secondary-100 no-border dark:text-theme-secondary-500 dark:border-theme-secondary-800"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex align-top flex-inline"
              >
                <div
                  class=""
                >
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed group last:border-theme-secondary-200 dark:last:border-theme-secondary-800 relative last:border-b-4! last:border-solid"
            data-testid="TableRow"
          >
            <td
              data-testid="AddressRow__wallet"
            >
              <div
                class="flex items-center px-3 pl-3 my-1 ml-3 space-x-3 rounded-l transition-colors duration-100 cursor-pointer min-h-11 group dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="flex-1 w-40"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="text-sm text-base font-semibold leading-tight border-b border-transparent hover:border-current text-theme-primary-700 transition-[color,border-color] duration-[200ms,350ms] delay-[0s,100ms]"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                    <span
                      class="overflow-hidden min-w-0 text-sm text-base font-semibold no-ligatures"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                    <button
                      class="relative cursor-pointer ring-focus focus:outline-hidden"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="copy"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </td>
            <td
              class="hidden xl:table-cell"
            >
              <div
                class="flex justify-end items-center px-3 my-1 text-sm font-semibold whitespace-nowrap transition-colors duration-100 min-h-11 text-theme-secondary-text dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  95.27653252 ARK
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 space-x-3 text-sm font-semibold transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <span
                  class="text-theme-secondary-400"
                >
                  N/A
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex justify-center items-center px-3 my-1 text-sm transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div
                  class="font-semibold text-theme-secondary-400"
                >
                  <span
                    class="text-theme-secondary-text"
                  >
                    0
                  </span>
                  <span>
                    /
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex justify-end items-center px-3 pr-3 my-1 mr-3 rounded-r transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
              >
                <div>
                  <button
                    class="inline-flex relative justify-center items-center p-3 -mr-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                    data-testid="AddressRow__select-0"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Vote
                    </div>
                  </button>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
